Update style.css to handle flat-bot style

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -817,7 +817,7 @@ section {
 
 .faq .accordion-list li {
   padding: 20px;
-  background: #fff;
+  background: #D9EDF4;
   border-radius: 4px;
   position: relative;
 }
